App2/src/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>TIckets</relationshipLabel>
        <relationshipName>TIckets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>TIckets (To)</relationshipLabel>
        <relationshipName>TIcketsTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ticket</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TIckets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>